fixed components issue and fixed topbar styling components needed to included in entry components, so i included entry components in components.module.ts and put all the components in there and that worked correctly. pages also had to be put into entry components and exported if we are declaring them in their module.ts file and not in app.module.ts - so i included both of those things there for each page. fixed styling for topbar when on mobile

--- a/src/pages/user-dashboard/user-dashboard.scss
+++ b/src/pages/user-dashboard/user-dashboard.scss
@@ -178,6 +178,11 @@ page-user-dashboard {
 
     }
 
+    .first-bar{
+      margin: 110px auto 0 auto;
+      border-top: 1px solid gray;
+    }
+
     .assessments {
       margin: 0 10px 0 20px;
       margin-bottom: 20px;
